--- a/Doocine-iOS/Base.lproj/Main.storyboard
+++ b/Doocine-iOS/Base.lproj/Main.storyboard
@@ -707,19 +707,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_banner_doocine" translatesAutoresizingMaskIntoConstraints="NO" id="xVv-5R-d3j">
-                                <rect key="frame" x="0.0" y="20" width="768" height="360"/>
+                                <rect key="frame" x="0.0" y="132.5" width="768" height="360"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="360" id="ZMY-mf-QmJ"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dialog" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lu0-Gs-F5j">
-                                <rect key="frame" x="24" y="481.5" width="43.5" height="18"/>
+                                <rect key="frame" x="24" y="594" width="43.5" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter dialog" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eey-or-zpl">
-                                <rect key="frame" x="24" y="507" width="720" height="30"/>
+                                <rect key="frame" x="24" y="619.5" width="720" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="cce-2z-AXg"/>
                                 </constraints>
@@ -728,7 +728,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H61-4C-R2a">
-                                <rect key="frame" x="0.0" y="549.5" width="768" height="0.5"/>
+                                <rect key="frame" x="0.0" y="662" width="768" height="0.5"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="GmS-dx-fCr"/>
@@ -738,31 +738,31 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHOT SIZE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X3z-Rs-EuT">
-                                <rect key="frame" x="24" y="401" width="76" height="18"/>
+                                <rect key="frame" x="24" y="513.5" width="76" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Closure Shot" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dkb-Ld-wVi">
-                                <rect key="frame" x="24" y="427" width="121" height="26"/>
+                                <rect key="frame" x="24" y="539.5" width="121" height="26"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CAMERA WALK" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Fl-d1-ev5">
-                                <rect key="frame" x="408.5" y="401" width="106.5" height="18"/>
+                                <rect key="frame" x="408.5" y="513.5" width="106.5" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aID-Uk-r7G">
-                                <rect key="frame" x="409" y="427" width="35" height="26"/>
+                                <rect key="frame" x="409" y="539.5" width="35" height="26"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gay-aR-hUU">
-                                <rect key="frame" x="0.0" y="388" width="768" height="0.5"/>
+                                <rect key="frame" x="0.0" y="500.5" width="768" height="0.5"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="KqG-50-PHf"/>
@@ -772,7 +772,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rd4-9E-rgC">
-                                <rect key="frame" x="384" y="388.5" width="0.5" height="80"/>
+                                <rect key="frame" x="384" y="501" width="0.5" height="80"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="t0q-eP-xBD"/>
@@ -783,7 +783,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lTA-s5-haH">
-                                <rect key="frame" x="0.0" y="468.5" width="768" height="0.5"/>
+                                <rect key="frame" x="0.0" y="581" width="768" height="0.5"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="iT3-fE-zGF"/>
@@ -793,7 +793,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="89B-0L-7uV">
-                                <rect key="frame" x="324" y="574" width="120" height="40"/>
+                                <rect key="frame" x="324" y="686.5" width="120" height="40"/>
                                 <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Igk-sd-ZRX"/>
@@ -803,6 +803,24 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cut Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNp-1O-f9S">
+                                <rect key="frame" x="24" y="36" width="108" height="23"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKW-Ja-H33">
+                                <rect key="frame" x="24" y="75" width="17" height="33.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IC4-Qn-2IT">
+                                <rect key="frame" x="47" y="75" width="13.5" height="33.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
@@ -812,21 +830,25 @@
                             <constraint firstAttribute="trailing" secondItem="lTA-s5-haH" secondAttribute="trailing" id="5hR-d7-ad4"/>
                             <constraint firstItem="X3z-Rs-EuT" firstAttribute="top" secondItem="gay-aR-hUU" secondAttribute="bottom" constant="12.5" id="6yY-hz-Y8P"/>
                             <constraint firstItem="gay-aR-hUU" firstAttribute="top" secondItem="xVv-5R-d3j" secondAttribute="bottom" constant="8" id="AGf-vb-6QZ"/>
-                            <constraint firstItem="xVv-5R-d3j" firstAttribute="top" secondItem="1u7-Ab-kVD" secondAttribute="bottom" id="BDa-uQ-N6D"/>
                             <constraint firstItem="Rd4-9E-rgC" firstAttribute="centerX" secondItem="MxP-2Z-s6z" secondAttribute="centerX" id="CCG-LK-WUj"/>
+                            <constraint firstItem="IC4-Qn-2IT" firstAttribute="leading" secondItem="AKW-Ja-H33" secondAttribute="trailing" constant="6" id="CnG-pM-IfW"/>
                             <constraint firstItem="X3z-Rs-EuT" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="Dcn-iq-Ydd"/>
                             <constraint firstItem="H61-4C-R2a" firstAttribute="top" secondItem="eey-or-zpl" secondAttribute="bottom" constant="12.5" id="G5H-IA-kgk"/>
                             <constraint firstItem="Dkb-Ld-wVi" firstAttribute="leading" secondItem="X3z-Rs-EuT" secondAttribute="leading" id="G8b-ku-MpJ"/>
+                            <constraint firstItem="AKW-Ja-H33" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="Gxj-tS-Fk2"/>
                             <constraint firstItem="eey-or-zpl" firstAttribute="top" secondItem="Lu0-Gs-F5j" secondAttribute="bottom" constant="8" id="HUo-Wg-0XQ"/>
                             <constraint firstItem="7Fl-d1-ev5" firstAttribute="top" secondItem="gay-aR-hUU" secondAttribute="bottom" constant="12.5" id="K9b-fG-1lL"/>
                             <constraint firstItem="H61-4C-R2a" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" id="KcL-jY-x8S"/>
                             <constraint firstItem="Dkb-Ld-wVi" firstAttribute="top" secondItem="X3z-Rs-EuT" secondAttribute="bottom" constant="8" id="NWX-Ia-q3H"/>
+                            <constraint firstItem="IC4-Qn-2IT" firstAttribute="centerY" secondItem="AKW-Ja-H33" secondAttribute="centerY" id="Ub7-Ge-IiV"/>
                             <constraint firstItem="xVv-5R-d3j" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" id="YDJ-YV-796"/>
                             <constraint firstAttribute="trailing" secondItem="H61-4C-R2a" secondAttribute="trailing" id="amo-bl-1jr"/>
+                            <constraint firstItem="AKW-Ja-H33" firstAttribute="top" secondItem="pNp-1O-f9S" secondAttribute="bottom" constant="16" id="d4l-oD-kIa"/>
                             <constraint firstItem="89B-0L-7uV" firstAttribute="top" secondItem="H61-4C-R2a" secondAttribute="bottom" constant="24" id="dvJ-Fu-MPK"/>
                             <constraint firstItem="Lu0-Gs-F5j" firstAttribute="top" secondItem="lTA-s5-haH" secondAttribute="bottom" constant="12.5" id="exD-Ez-WgT"/>
                             <constraint firstItem="aID-Uk-r7G" firstAttribute="leading" secondItem="7Fl-d1-ev5" secondAttribute="leading" id="l56-Cl-OGd"/>
                             <constraint firstAttribute="trailing" secondItem="eey-or-zpl" secondAttribute="trailing" constant="24" id="lri-i6-Qcy"/>
+                            <constraint firstItem="xVv-5R-d3j" firstAttribute="top" secondItem="IC4-Qn-2IT" secondAttribute="bottom" constant="24" id="mMN-Wa-NzB"/>
                             <constraint firstItem="lTA-s5-haH" firstAttribute="top" secondItem="Rd4-9E-rgC" secondAttribute="bottom" id="n5I-4R-dnp"/>
                             <constraint firstAttribute="trailing" secondItem="xVv-5R-d3j" secondAttribute="trailing" id="nWZ-Xh-s7k"/>
                             <constraint firstItem="aID-Uk-r7G" firstAttribute="top" secondItem="7Fl-d1-ev5" secondAttribute="bottom" constant="8" id="nsP-VT-Qbd"/>
@@ -834,12 +856,15 @@
                             <constraint firstItem="Lu0-Gs-F5j" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="p0l-Rs-kAJ"/>
                             <constraint firstAttribute="trailing" secondItem="gay-aR-hUU" secondAttribute="trailing" id="pty-qz-fl1"/>
                             <constraint firstItem="7Fl-d1-ev5" firstAttribute="leading" secondItem="Rd4-9E-rgC" secondAttribute="trailing" constant="24" id="xSh-5U-fHP"/>
+                            <constraint firstItem="pNp-1O-f9S" firstAttribute="top" secondItem="1u7-Ab-kVD" secondAttribute="bottom" constant="16" id="yhu-ur-Key"/>
+                            <constraint firstItem="pNp-1O-f9S" firstAttribute="leading" secondItem="MxP-2Z-s6z" secondAttribute="leading" constant="24" id="zQN-rG-TWB"/>
                             <constraint firstItem="Rd4-9E-rgC" firstAttribute="top" secondItem="gay-aR-hUU" secondAttribute="bottom" id="zhr-fS-CDv"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="cameraWalkValueLabel" destination="aID-Uk-r7G" id="8J3-Sw-HqF"/>
                         <outlet property="cutImage" destination="xVv-5R-d3j" id="qBc-P7-rlQ"/>
+                        <outlet property="cutNumberLabel" destination="IC4-Qn-2IT" id="iY8-H6-tIb"/>
                         <outlet property="dialogTextField" destination="eey-or-zpl" id="gwA-tB-pUi"/>
                         <outlet property="makeButton" destination="89B-0L-7uV" id="Cgk-pT-bqx"/>
                         <outlet property="shotSizeValueLabel" destination="Dkb-Ld-wVi" id="WnI-WL-2NA"/>
